tests/core/ill-typed/extra-tests/incorrect_arity_of_main/my-test.stella
language core;

extend with #multiparameter-functions;

fn first(a : Nat, b : Nat) -> Nat {
        return a
}

fn main (n : Nat, m : Nat) -> Nat {
        return first(m, n)
}
